--- a/MyCalendar.React/FullCalendar/src/components/fullcalendar/Calendar.css
+++ b/MyCalendar.React/FullCalendar/src/components/fullcalendar/Calendar.css
@@ -14,7 +14,8 @@
     border-radius: 5px;
     margin: 5px;
     padding: 5px;
-    min-height: 30px;
+    min-height: 25px;
+    max-height: 35px;
     border: none;
     box-shadow: 0 3px 3px rgba(0,0,0,0.2);
 }
@@ -84,8 +85,46 @@ button:disabled{
 }
 
 .modal-bg {
-    background-image: url('https://newevolutiondesigns.com/images/freebies/white-wallpaper-18.jpg');
-    background-size: cover;
+    
     border-radius: 5px;
     box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+    padding: 0px;
+    margin:0px;
+}
+
+.modal-header {
+    padding: 10px;
+    margin:0px;
+    padding-left:20px;
+    background-color: #f1f3f4;
+}
+
+.modal-footer {
+    padding: .30rem;
+    background: #f1f3f4;
+}
+
+.alert {
+    margin-bottom: 0px;
+    padding: .35rem .85rem;
+}
+
+.input100 {
+    height:  45px !important;
+}
+
+/* edit event*/
+.edit-event-actions {
+    width: 100%;
+}
+
+.event-action {
+    float: right;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
+.event-info {
+    margin:5px;
+    padding:5px;
 }
