--- a/MyCalendar.MVC/Content/Site.css
+++ b/MyCalendar.MVC/Content/Site.css
@@ -1,7 +1,5 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    background-image: url('https://newevolutiondesigns.com/images/freebies/white-wallpaper-18.jpg')
+    background-image: url('./img/bg.jpg')
 }
 
 
@@ -84,194 +82,11 @@ textarea {
 }
 
 
-
-.treeview {
-    /*border-top-left-radius: 10px;
-    border-top-right-radius: 10px;*/
-}
-
-/* multi level dropdown*/
-.menu {
-
-    font-size: medium;
-}
-
-.menu ul {
-  margin: 0;
-  padding: 0;
-}
-
-.menu .main-menu {
-  display: none;
-}
-
-#tm:checked + .main-menu {
-  display: block;
-}
-
-.menu input[type="checkbox"], 
-.menu ul span.drop-icon {
-  display: none;
-}
-
-.menu li, 
-.toggle-menu, 
-.menu .sub-menu {
-  border-style: solid;
-  border-color: rgba(0, 0, 0, .05);
-}
-
-.menu li, 
-.toggle-menu {
-  border-width: 0 0 1px;
-}
-
-
-.menu .sub-menu {
-    background-image: url("img/bg1.jpg");
-    border-width: 1px 1px 0;
-    margin: 0 1em;
-}
-
-.menu .sub-menu li:last-child {
-  border-width: 0;
-}
-
-.menu li, 
-.toggle-menu, 
-.menu a {
-  position: relative;
-  display: block;
-  color: white;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
-}
-
-.menu,
-.toggle-menu {
-    background-image: url("img/bg1.jpg");
-    background-size: cover;
-}
-
-.toggle-menu, 
-.menu a {
-  padding: 1em 1.5em;
-}
-
-.menu a {
-  transition: all .125s ease-in-out;
-  -webkit-transition: all .125s ease-in-out;
-}
-
-.menu a:hover {
-  color: #09c;
-  text-decoration: none;
-}
-
-.menu .sub-menu {
-  display: none;
-}
-
-.menu input[type="checkbox"]:checked + .sub-menu {
-  display: block;
-}
-
-.toggle-menu .drop-icon, 
-.menu li label.drop-icon {
-  position: absolute;
-  right: 1.5em;
-  top: 1.25em;
-}
-
-.menu .drop-icon {
-  line-height: 1;
-}
-
-
-.menu li.menu-right {
-    float: right;
-}
-
-@media (max-width: 991.98px) {
-    .menu .home-link {
-        display: none;
-    }
-    .toggle-menu {
-        margin: 0px;
-    }
-
-    .menu .container {
-        padding-right: 0px;
-        padding-left: 0px;
-    }
-
-    .menu li.menu-right {
-        float: none;
-    }
-}
-
-@media only screen and (max-width: 64em) and (min-width: 52.01em) {
-  .menu li {
-    width: 33.333%;
-  }
-
-  .menu .sub-menu li {
-    width: auto;
-  }
-}
-
-@media only screen and (min-width: 52em) {
-  .menu .main-menu {
-    display: block;
-  }
-
-  .toggle-menu, 
-  .menu label.drop-icon {
-    display: none;
-  }
-
-  .menu ul span.drop-icon {
-    display: inline-block;
-  }
-
-  .menu li {
-    float: left;
-    border-width: 0 1px 0 0;
-  }
-
-  .menu .sub-menu li {
-    float: none;
-  }
-
-  .menu .sub-menu {
-    border-width: 0;
-    margin: 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 140%;
-    z-index: 3000;
-  }
-
-  .menu .sub-menu, 
-  .menu input[type="checkbox"]:checked + .sub-menu {
-    display: none;
-  }
-
-  .menu .sub-menu li {
-    border-width: 0 0 1px;
-  }
-
-  .menu .sub-menu .sub-menu {
-    top: 0;
-    left: 100%;
-  }
-
-  .menu li:hover > input[type="checkbox"] + .sub-menu {
-    display: block;
-  }
-}
-
 /* bootstrap overrides*/
+
+.modal-content {
+    margin-top: 100px;
+}
 
 .icon-align {
     margin-left: -5px;
