--- a/MyCalendar.React/ErrandRunner/src/components/app/App.css
+++ b/MyCalendar.React/ErrandRunner/src/components/app/App.css
@@ -2,13 +2,8 @@
 /* selection refinement css */
 
 .refinement-search {
-    /* width: 540px; */
-    /* display: inline-block; */
-    /* font-size: 17px; */
     box-sizing: border-box;
-    /* padding: 15px 20px; */
     margin: 15px auto;
-    /* height: 56px; */
     font-style: italic;
     border-radius: 6px;
     border: 1px solid #d2d2d2;
@@ -18,6 +13,7 @@
 .selection-item label {
     font-weight: 400;
     padding: 5px 10px;
+    margin-left: 30px;
     border-radius: 0px;
     border: none;
     width: 100%;
@@ -25,64 +21,23 @@
     box-sizing: border-box;
 } 
 
-/* @media (max-width: 1199px) {
-
-    .refinement-dropdown {
-        height: 400px;
-        overflow-y: hidden;
-        overflow-x: hidden;
-    }
+.navigator {
+    margin-top: -20px;
+    margin-bottom: 50px;
 }
 
-.selection-refinement {
-    margin: 15px 0 30px;
-    text-align: center;
-    
+.MuiStepper-root {
+    padding: 0px !important;
 }
 
-.refinement-search {
-    max-width: 538px;
-    width: calc(100% - 20px);
-    margin: 0 10px;
-    display: inline-block;
-    position: relative;
-    text-align: left;
+.MuiStepIcon-root.MuiStepIcon-active {
+    color: #09c !important;
 }
 
-
-
-.refinement-search input:focus{
-    outline: none;
+.MuiStepIcon-root.MuiStepIcon-completed {
+    color: #09c !important;
 }
 
-.refinement-dropdown {
-    width: calc(100% + 2px);
-    top: 65px;
-    position: absolute;
-    z-index: 999999;
-    left: 0px;
-    background-color: #ffffff;
-    border: 1px solid #d2d2d2;
-    border-radius: 0px 0px 3px 3px;
-    border-top: none;
-    padding-bottom: 5px;
+.customer-registration {
+    margin-top: 50px;
 }
-
-.selection-item {
-    display: block;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 5px 10px;
-    width: 100%;
-    position: relative;
-}
-
-.selection-item label {
-    font-weight: 400;
-    padding: 5px 10px;
-    border-radius: 0px;
-    border: none;
-    width: 100%;
-    display: block;
-    box-sizing: border-box;
-} */
