Errand runner order completion steps  4 & 5 - steps and components refactor with Redux connect, add MOV to formula config, google maps driver locator/selector with directions, order - (save, retrieve and create), stakeholder repository to include customers and drivers, stripe payment implementation,

--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                                     <ul>
                                         <li>
                                             <a style="@(Model.MenuItem.ERNewOrder ? "color:#09c" : "")" href="@Url.Action(Url.MvcRoute(Section.ErrandRunnerNewOrder).ActionName, Url.MvcRoute(Section.ErrandRunnerNewOrder).ControllerName)">
-                                                <i class="fas fa-user-edit"></i> New Customer/Order
+                                                <i class="fas fa-user-edit"></i> New Order
                                             </a>
                                         </li>
                                     </ul>
