--- a/MyCalendar.React/ErrandRunner/src/components/app/App.css
+++ b/MyCalendar.React/ErrandRunner/src/components/app/App.css
@@ -38,6 +38,6 @@
     color: #09c !important;
 }
 
-.customer-registration {
-    margin-top: 50px;
+.toggleswitch-margin-top {
+    margin-top: 30px;
 }
