--- a/Appology.MVC/Views/Account/Index.cshtml
+++ b/Appology.MVC/Views/Account/Index.cshtml
@@ -1,17 +1,15 @@
 ﻿@using Appology.Website.ViewModels
 @using Appology.Enums
-
+@using Appology.Helpers
+@model Appology.Website.ViewModels.LoginViewModel
 @{
     ViewBag.Title = "Authenticate";
 }
 
-
-
 <link href="~/Content/Login.css" rel="stylesheet" type="text/css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-
-
+<div id="cover-spin"></div>
 <div class="wrapper fadeInDown">
 
     @if (TempData["ErrorMsg"] != null && !string.IsNullOrEmpty(TempData["ErrorMsg"].ToString()))
@@ -30,35 +28,28 @@
             <div class="fadeIn first" style="padding: 10px">
                 <i class="fas fa-user fa-4x"></i>
             </div>
-
-            @using (Html.BeginForm("Test", "Account", FormMethod.Post))
-            {
-                <input name="test" />
-                <input type="submit" value="test" />
-            }
-
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { id = "login-form" }))
             {
                 @Html.AntiForgeryToken()
-                <input type="text" id="login" class="login login-form-input fadeIn second" name="email" placeholder="Enter email" required>
-                <input type="password" id="password" class="login login-form-input fadeIn third" name="password" placeholder="Enter password" required>
-                <input type="hidden" name="inviteeId" value="@TempData["InviteeId"]" />
-                <input type="submit" class="login fadeIn fourth" value="Enter App">
+                @Html.TextBoxFor(x => x.Email, new { id = "login", @class = "login login-form-input fadeIn second", placeholder = "Enter email", @required = "required" })
+                @Html.PasswordFor(x => x.Password, new { id = "password", @class = "login login-form-input fadeIn third", placeholder = "Enter password", @required = "required" })
+                @Html.HiddenFor(x => x.InviteeId, new { Value = @TempData["InviteeId"] })
+                <button type="submit" class="login fadeIn fourth">Enter App</button>
             }
-            </div>
+        </div>
         <div id="register" style="display: none">
             <div class="fadeIn first" style="padding: 10px">
                 <i class="fas fa-user-plus fa-3x"></i>
             </div>
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-                <input type="text" id="name" class="login form-input fadeIn second" name="name" placeholder="Enter name" required>
-                <input type="text" id="email" class="login form-input fadeIn second" name="email" placeholder="Enter login email" required>
-                <input type="password" id="password" class="login form-input fadeIn third" name="password" placeholder="Enter password" required>
-                <input type="password" id="password-confirm" class="login form-input fadeIn third" placeholder="Confirm password" required>
-                <input type="submit" class="login fadeIn fourth" value="Signup">
-            }
+            @using (Html.BeginForm("Register"))
+                {
+                    @Html.AntiForgeryToken()
+                    <input type="text" id="name" class="login form-input fadeIn second" name="name" placeholder="Enter name" required>
+                    <input type="text" id="email" class="login form-input fadeIn second" name="email" placeholder="Enter login email" required>
+                    <input type="password" id="password" class="login form-input fadeIn third" name="password" placeholder="Enter password" required>
+                    <input type="password" id="password-confirm" class="login form-input fadeIn third" placeholder="Confirm password" required>
+                    <button type="button" class="login fadeIn fourth" onclick="alert('Registration currently disabled')">Signup</button>
+                }
         </div>
 
         <div id="formFooter">
@@ -72,7 +63,6 @@
         $(document).ready(function () {
 
             $('#login-signup').click(function (e) {
-
                 var text = $('#login-signup').text();
                 $(this).text(text == "Register New Account" ? "Already Registered?" : "Register New Account");
                 $('#register').slideToggle(500);
@@ -80,6 +70,28 @@
 
             });
 
+        });
+
+        $('#login-form').submit(function () {
+            var token = $('input[name="__RequestVerificationToken"]', $(this)).val();
+            $("#cover-spin").show();
+            $.ajax({
+                type: "POST",
+                data: {
+                    __RequestVerificationToken: token,
+                    model: stringify($(this))
+                },
+                url: "@Url.MvcRouteUrl(Section.LoginSubmit)",
+                success: function (response) {
+                    $("#cover-spin").hide();
+                    window.location = response.url;
+                },
+                error: function (result) {
+                    $("#cover-spin").hide();
+                    alert("Unable to login");
+                }
+            })
+            return false;
         });
     </script>
 }
