React app versioning, errand runner v1.0.1 - delete order, bug fixes and style improvements and refactoring

--- a/Appology.MVC/Views/Home/Index.cshtml
+++ b/Appology.MVC/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
     </div>
 }
 else
-{
-    @Html.Partial("_ReactApp", "fullcalendar")
+{ 
+    @Html.Partial("_ReactApp", new ReactAppVM
+    {
+        App = "fullcalendar",
+        Version = "5.0.1"
+    })
 }
