--- a/Appology.MVC/Areas/ER/Views/Order/New.cshtml
+++ b/Appology.MVC/Areas/ER/Views/Order/New.cshtml
@@ -1,1 +1,7 @@
-﻿@Html.Partial("_ReactApp", "errandrunner")
+﻿@using Appology.Website.ViewModels
+
+@Html.Partial("_ReactApp", new ReactAppVM
+{
+    App = "errandrunner",
+    Version = "1.0.1"
+})'
