Use appology load react component in finance app, remove react spinner npm

--- a/Appology.MVC/Areas/Finance/Views/App/Index.cshtml
+++ b/Appology.MVC/Areas/Finance/Views/App/Index.cshtml
@@ -1,2 +1,9 @@
-﻿<link href="~/Content/FinanceApp.css" rel="stylesheet" type="text/css" />
-@Html.Partial("_ReactApp", "finance")
+﻿@using Appology.Website.ViewModels
+
+<link href="~/Content/FinanceApp.css" rel="stylesheet" type="text/css" />
+
+@Html.Partial("_ReactApp", new ReactAppVM
+{
+    App = "finance",
+    Version = "v2.0.2"
+})
